# pomodori

./: .Pomodori  CMakeLists.txt  LICENSE  README.md  logging.cpp  logging.h  main.cpp  pomodori.h  totimer.cpp  totimer.h  trayicon.cpp  trayicon.h
